<resources>

    <string name="app_name">BudgetBuddy</string>


    <string name="login">Zaloguj się</string>
    <string name="passw">hasło</string>
    <string name="notpassw">Nie pamiętam hasła</string>
    <string name="email">e-mail</string>
    <string name="notsignup">Nie masz jeszcze konta?</string>
    <string name="signup">Zarejestruj się</string>

    <string name="ok">Zatwierdź</string>


    <string name="budgetT">Podaj swój miesięczny budżet</string>
    <string name="budgetP">0,00 zł</string>
    <string name="savingsT">Podaj swoje oszczędności</string>
    <string name="savingsP">0,00 zł</string>

    <string name="getimie">Podaj imię</string>
    <string name="getnazwisko">Podaj nazwisko</string>
    <string name="getemail">Podaj e-mail</string>
    <string name="getpassw1">Podaj hasło</string>
    <string name="getpassw2">Powtórz hasło</string>
    <string name="haveaccount">Masz już konto?</string>
    <string name="open_menu">***</string>
    <string name="closw_menu">***</string>


    <string name="nameofpageHP">Strona główna</string>
    <string name="zloty">zł</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="plus">PRZYCHODY</string>
    <string name="minus">WYDATKI</string>


    <string name="amount">kwota</string>
    <string name="add_transaction">Dodaj transakcję</string>
    <string name="category">Kategoria:</string>
    <string name="choose">WYBIERZ</string>
    <string name="date">Data:</string>
    <string name="today">dzisiaj</string>
    <string name="yesterday">wczoraj</string>
    <string name="notes">Notatki:</string>
    <string name="notes_text">Wpisz, na co wydałeś pieniądze</string>
    <string name="notes_text_income">Wpisz, za co dostałeś pieniądze</string>
    <string name="select_day_text">WYBIERZ DATĘ</string>
    <string name="selected_day">Wybrana data</string>
    <string name="select_category">WYBIERZ KATEGORIĘ</string>
    <string name="selected_category">Wybrana kategoria</string>
    <string name="house_text">Dom</string>
    <string name="car_text">Samochód</string>
    <string name="transport_text">Transport</string>
    <string name="sport_text">Sport</string>
    <string name="health_text">Zdrowie</string>
    <string name="entertaiment_text">Rozrywka</string>
    <string name="relax_text">Wypoczynek</string>
    <string name="restaurant_text">Restauracje</string>
    <string name="gift_text">Prezenty</string>
    <string name="clothes_text">Ubrania</string>
    <string name="shopping_text">Zakupy</string>
    <string name="education_text">Edukacja</string>
    <string name="add_new_cat_text">Dodaj własną kategorię</string>
    <string name="undo">Cofnij</string>
    <string name="add_fixed_expense">Dodaj zlecenie stałe</string>
    <string name="name_of_fixed_expense">Nazwa zlecenia:</string>
    <string name="write_name">Wpisz nazwę</string>
    <string name="amount_text">Kwota:</string>
    <string name="enter_amount">Wpisz kwotę</string>
    <string name="payment_date">Data najbliższej płatności:</string>
    <string name="payment_end">Data zakończenia:</string>
    <string name="repeat_text">Powtarzaj:</string>
    <string name="end_text">Zakończ:</string>
    <string name="transactions_to_do">Transfery do wykonania:</string>
    <string name="write">Wpisz</string>
    <string name="select_category1">Wybierz kategorię:</string>


    <string name="notification_text">PRZYPOMNIENIE</string>
    <string name="confirm_notification_text">OPŁACONE</string>
    <string name="no_confirm_notification_text">ANULUJ</string>
    <string name="day_of_payment">Dziś jest dzień opłaty za: </string>
    <string name="question_remove_expense">CZY JESTEŚ PEWNY, ŻE CHCESZ USUNĄĆ TEN ELEMENT?</string>
    <string name="delete">USUŃ</string>
    <string name="fixed_expenses">Zlecenie stałe:</string>
    <string name="title_activity_char_pie">CharPieActivity</string>


    <string name="add_img">Dodaj zdjęcie</string>
    <string name="add_img_done">Zdjęcie zostało dodane</string>

    <string name="change_img">Zmień zdjęcie</string>
    <string name="change_name">Edytuj imię</string>
    <string name="change_lastname">Edytuj nazwisko</string>
    <string name="setting_text">Edytuj</string>
    <string name="save">Zapisz</string>



    <string name="select_date">Wybierz okres:</string>
    <string name="from">od</string>
    <string name="to">do</string>
    <string name="myslnik">-</string>


    <string name="general_budget">BUDŻET OGÓLNY</string>
    <string name="expenses">WYDATKI</string>
    <string name="budget">BUDŻET</string>
    <string name="cat">KATEGORIE</string>




</resources>