<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:gravity="center"
android:background="@drawable/money"
tools:context=".LoginActivity">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    app:cardCornerRadius="30dp"
    app:cardElevation="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp"
        android:background="@drawable/edittext">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/m_green"
            android:id="@+id/textregist"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">


            <ImageButton
                android:id="@+id/add_img_button"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/circle1"
                android:src="@drawable/add_img"
                android:scaleType="centerInside"
                android:paddingRight="1dp"
                android:paddingBottom="1dp"
                android:backgroundTint="@color/m_green"
                android:layout_gravity="center"
                android:visibility="visible"
                />

            <TextView
                android:id="@+id/add_img_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/add_img"
                android:gravity="center"
                android:textColor="@color/m_green"
                android:textSize="13sp"
                android:textStyle="italic" />


        </LinearLayout>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/imie"
            android:background="@drawable/edittext"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:hint="@string/getimie"
            android:textColor="@color/m_green"
            android:textColorHint="@color/textgreen"
            android:textStyle="italic"
            android:textSize="13sp"
            android:drawablePadding="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/nazwisko"
            android:background="@drawable/edittext"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:hint="@string/getnazwisko"
            android:textColor="@color/m_green"
            android:textColorHint="@color/textgreen"
            android:textStyle="italic"
            android:textSize="13sp"
            android:drawablePadding="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/email1"
            android:background="@drawable/edittext"
            android:layout_marginTop="25dp"
            android:padding="15dp"
            android:hint="@string/getemail"
            android:textColorHint="@color/textgreen"
            android:textStyle="italic"
            android:textSize="13sp"
            android:textColor="@color/m_green"
            android:drawablePadding="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/passw1"
            android:background="@drawable/edittext"
            android:layout_marginTop="25dp"
            android:padding="15dp"
            android:inputType="textPassword"
            android:hint="@string/getpassw1"
            android:textStyle="italic"
            android:textColor="@color/m_green"
            android:textColorHint="@color/textgreen"
            android:textSize="13sp"
            android:drawablePadding="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/passw2"
            android:background="@drawable/edittext"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:inputType="textPassword"
            android:hint="@string/getpassw2"
            android:textStyle="italic"
            android:textColor="@color/m_green"
            android:textColorHint="@color/textgreen"
            android:textSize="13sp"
            android:drawablePadding="10dp"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="25dp"
            android:id="@+id/regbutton"
            android:text="@string/signup"
            android:textSize="14sp"
            android:textStyle="italic"
            android:backgroundTint="@color/m_green"
            app:cornerRadius = "30dp"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/haveaccount"
            android:textColor="@color/m_green"
            android:id="@+id/haveaccount"
            android:textSize="12sp"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/signin"
            android:layout_width="200dp"
            android:layout_height="36dp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/login"
            android:textColor="@color/textgreen"
            android:textSize="10sp"
            android:textStyle="bold|italic"

            />







    </LinearLayout>

</androidx.cardview.widget.CardView>





</LinearLayout>