<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_expenses_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:context=".ExpensesAddingFragment">


    <LinearLayout
        android:id="@+id/toolbar_addtransaction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textgreen">

            <Button
                android:id="@+id/undo"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:drawableLeft="@drawable/arrow_back" />


            <TextView
                android:id="@+id/add_transaction_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_transaction"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <Button
                android:id="@+id/add_expenses_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:background="@drawable/custom_button"
                android:elevation="5dp"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/add_income_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:background="@drawable/custom_button"
                android:elevation="5dp"
                android:text="@string/plus"
                android:textColor="@color/green_light"
                android:textSize="18sp"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <EditText
                    android:id="@+id/amount"
                    android:layout_width="200dp"
                    android:layout_height="80dp"
                    android:backgroundTint="@color/textgreen"
                    android:gravity="center"
                    android:hint="@string/amount"
                    android:padding="15dp"
                    android:textColorHint="@color/green_light"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/zloty3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zloty"
                    android:textAlignment="center"
                    android:textColor="@color/textgreen"
                    android:textSize="30sp" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/choose_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:text="@string/date"
                    android:textColor="@color/textgreen"
                    android:textSize="14sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/select_date_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:hint="@string/selected_day"
                    android:paddingLeft="30dp"
                    android:textColorHint="@color/textgreen"
                    android:textSize="10sp"
                    android:textStyle="italic"
                    android:visibility="visible" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.9"
                android:gravity="center_horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/today"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:background="@drawable/edittext"
                    android:gravity="center"
                    android:text="@string/today"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/yesterday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.3"
                    android:background="@drawable/edittext"
                    android:gravity="center"
                    android:text="@string/yesterday"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:visibility="visible" />

                <Button

                    android:id="@+id/choose_calendar_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/edittext"
                    android:drawableTop="@drawable/calendar"
                    android:gravity="center"
                    android:visibility="visible" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/choose_category_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:text="@string/category"
                    android:textColor="@color/textgreen"
                    android:textSize="14sp"
                    android:visibility="visible" />



            </LinearLayout>



            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_weight="0.9"
                android:gravity="center_horizontal"
                android:visibility="visible">

                <Spinner
                    android:id="@+id/category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edittext"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/notes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/notes"
                android:textColor="@color/textgreen"
                android:textSize="14sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/noteEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.9"
                android:background="@drawable/edittext2"
                android:gravity="start|top"
                android:hint="@string/notes_text"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:padding="30dp"
                android:scrollbars="vertical"
                android:textColorHint="@color/green_light"
                android:textSize="12sp"
                android:visibility="visible" />


        </LinearLayout>

        <Button
            android:id="@+id/confirm_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/ok"
            android:textSize="15sp"
            android:textStyle="bold" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>