<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="195dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:padding="300dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/m_green"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/edittext"
                android:drawableLeft="@drawable/osoba"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:padding="15dp"
                android:textColor="@color/m_green"
                android:textColorHint="@color/textgreen"
                android:textSize="13sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/passw"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext"
                android:drawableLeft="@drawable/zamek"
                android:drawablePadding="10dp"
                android:hint="@string/passw"
                android:textColor="@color/m_green"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColorHint="@color/textgreen"
                android:textSize="13sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/notpassw"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_gravity="right"
                android:background="@android:color/transparent"
                android:gravity="right"
                android:paddingRight="7dp"
                android:text="@string/notpassw"
                android:textColor="@color/textgreen"
                android:textSize="12sp"
                android:textStyle="bold|italic"

                />

            <Button
                android:id="@+id/logbutton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/m_green"
                android:text="@string/login"
                android:textSize="14sp"
                android:textStyle="italic"
                app:cornerRadius="30dp" />

            <TextView
                android:id="@+id/notsignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/notsignup"
                android:textAlignment="center"
                android:textColor="@color/m_green"
                android:textSize="12sp" />

            <Button
                android:id="@+id/signup"
                android:layout_width="200dp"
                android:layout_height="33dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="@color/textgreen"
                android:textSize="11sp"
                android:textStyle="bold|italic"

                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>





</LinearLayout>