<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings_background"
    android:background="@color/textgreen"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SettingsFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/edittext">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_text"
                android:textColor="@color/m_green"
                android:id="@+id/settings_text"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">


                <ImageView
                    android:id="@+id/change_img_button"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:scaleType="centerCrop"
                    android:paddingRight="1dp"
                    android:paddingBottom="1dp"
                    android:backgroundTint="@color/m_green"
                    android:layout_gravity="center"
                    android:visibility="visible"
                    />

                <TextView
                    android:id="@+id/change_img_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:text="@string/change_img"
                    android:gravity="center"
                    android:textColor="@color/m_green"
                    android:textSize="14sp"
                    android:textStyle="italic" />


            </LinearLayout>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/name_change"
                android:background="@drawable/edittext"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:hint="@string/change_name"
                android:textColor="@color/m_green"
                android:textColorHint="@color/textgreen"
                android:textStyle="italic"
                android:textSize="14sp"
                android:drawablePadding="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/change_lastname"
                android:background="@drawable/edittext"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:hint="@string/change_lastname"
                android:textColor="@color/m_green"
                android:textColorHint="@color/textgreen"
                android:textStyle="italic"
                android:textSize="14sp"
                android:drawablePadding="10dp"/>




            <Button
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="25dp"
                android:id="@+id/save_button"
                android:text="@string/save"
                android:textSize="14sp"
                android:textStyle="italic"
                android:backgroundTint="@color/m_green"
                app:cornerRadius = "30dp"/>




        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>